--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SaiHLu.github.io/react-basic-monsters.git",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
@@ -11,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
